[package]
edition = "2024"
name = "convert_img"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.36", features = ["derive"]}
image = {version = "0.25.6"}
image_hasher = "3.0.0"
img2avif = "0.1.0"
indicatif = "0.17.11"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = {version = "1.16.0", features = ["v7"]}
